[package]
name = "fir_server"
version = "0.1.0"
edition = "2021"

[dependencies]
fir_game = { path = "../fir_game" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
thiserror = "1.0.64"
hyper-tungstenite = "0.15.0"
