[package]
name = "fir_server"
version = "0.1.0"
edition = "2021"

[dependencies]
fir_game = { path = "../fir_game" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
thiserror = "1.0.64"
hyper-tungstenite = { version = "0.15" }
chrono = "0.4.38"
tungstenite = "0.24.0"
futures = "0.3.31"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
bytes = "1.8.0"
